# twitter-model

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: api.rs
schemas/: api.json
