[package]
name = "twitter-model-cli"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twitter-model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
log = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
simplelog = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twitter-model = { path = "../lib", version = "0.1.0" }
