[package]
name = "twitter-model"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twitter-model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
regress = "0.4"
serde = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1"

[build-dependencies]
schemars = "0.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
typify = "0.0.10"
